--- a/apps/web/src/components/about/MissionVisionValues.astro
+++ b/apps/web/src/components/about/MissionVisionValues.astro
@@ -25,7 +25,7 @@ interface Props {
 const { mission, vision, values } = Astro.props;
 ---
 
-<section class="min-h-[60vh] py-10 sm:py-[100px] bg-[var(--color-neutral)]/30">
+<section class="min-h-[60vh] py-10 sm:py-[100px] bg-[var(--color-primary)]/10">
     <div class="container mx-auto px-5 sm:px-[60px]">
         {/* Mission & Vision */}
         <div class="grid md:grid-cols-2 gap-8 mb-20">
